Fix text alignment on result button

--- a/_search.scss
+++ b/_search.scss
@@ -215,6 +215,7 @@ body {
       font-family: "Lato", sans-serif;
       font-size: 1.5rem;
       text-transform: uppercase;
+      text-align: center;
       padding: 0.8rem 3rem;
       cursor: pointer;
       transition: all 0.2s;
